# lung-sarg

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/collections/nsclc_radiogenomics/: README.md
data/idc-nsclc-radiogenomics-sampler/: NSCLCR01Radiogenomic_DATA_LABELS_2018-05-22_1500-shifted.csv  idc_manifest_full_table.csv
lung_sarg/: __init__.py  resources.py  sensors.py
lung_sarg/assets/: huggingface.py  idc.py  indicators.py  injested_study.py  others.py  spain.py
