[project]
name = "lung-sarg"
version = "1.0.0"
authors = [{ name = "Matt McCormick" }]
dependencies = [
    "altair",
    "dagster-dbt==0.23.16",
    "dagster-duckdb-polars==0.23.16",
    "dagster-duckdb",
    "dagster==1.7.16",
    "datasets",
    "dbt-core",
    "dbt-duckdb",
    "duckdb==1.0.0",
    "huggingface_hub",
    "httpx[http2]",
    "ipykernel",
    "ipywidgets",
    "pyarrow",
    "python-slugify",
    "tenacity",
]

requires-python = ">=3.11, <=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://radiogenomics.github.io/lung-sarg/"
Changelog = "https://github.com/radiogenomics/lung-sarg/commits/main/"
Issues = "https://github.com/radiogenomics/lung-sarg/issues"
CI = "https://github.com/radiogenomics/lung-sarg/actions"

[project.optional-dependencies]
dev = ["dagster-webserver==1.7.16", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lung_sarg"]

[tool.setuptools.package-data]
"lung_sarg" = ["../dbt/**"]

[tool.dagster]
module_name = "lung_sarg"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
length-sort = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lung-sarg = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
